--- a/7.0 CSS Cascade/style.css
+++ b/7.0 CSS Cascade/style.css
@@ -1,8 +1,23 @@
 /* Don't change the existing CSS. */
 
+#outer-box {
+  border: 10px solid purple;
+  padding: 10px;
+}
+
 .box {
   background-color: blue;
   padding: 10px;
+}
+
+/* position of .box and .inner-box */
+.inner-box {
+  background-color: red;
+}
+
+/* Combine two selector */
+.inner-box p {
+  color: white;
 }
 
 p {
