--- a/7.1 Combining Selectors/style.css
+++ b/7.1 Combining Selectors/style.css
@@ -1,1 +1,25 @@
 /* Write your code here: */
+/* Aplly the same Css more than 1 selector - here 2 */
+h1, h2 {
+  color: blueviolet;
+}
+
+/* Parent to DIRECT child*/
+.box > p {
+  color: firebrick;
+}
+
+/* Descendant*/
+.box li {
+  color: blue;
+}
+
+/* Chaining*/
+li.done {
+  color: seagreen;
+}
+
+/* Combined -(descendant + chaning) combined here */
+ul p.done {
+  font-size: 0.5rem;
+}
