--- a/0.0 Practice Here/styles.css
+++ b/0.0 Practice Here/styles.css
@@ -1,42 +1,37 @@
-p {
-  color: #FB8B24;
-}
-
-#special-element {
-  background-color: brown;
-}
-
-.highlight {
-  border-style: dashed;
-}
-
-div ul {
-  padding: 20px;
-}
-
-.parent-container>p {
-  font-style: italic;
-}
-
-a[href="#"] {
-  font-weight: 900;
-}
-
-img[src] {
-  border: 2px dashed black;
-}
-
-input[type="text"] {
-  background-color: #C1F2B0;
-}
-
-a[href$=".pdf"] {
-  font-style: italic;
-  font-weight: 900;
-  color:rgb(0, 255, 191);
-}
-
-*[data-type="important"], [class="featured"] {
-  font-weight: 900;
+header nav a {
   color: blue;
+  font-weight: 700;
+}
+
+header a:hover {
+  border: 1px solid black;
+  color: red;
+  background-color: aliceblue;
+}
+
+article p {
+  text-decoration: underline;
+}
+
+.featured h2 {
+  background-color: yellow;
+}
+
+footer {
+  text-align: center;
+}
+
+section aside ul li:last-child {
+  font-weight: 600;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.featured article p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: red;
+  font-weight: 600;
+}
+
+section.news article:nth-of-type(1) p {
+  background-color: green;
 }
