--- a/SELF/style2.css
+++ b/SELF/style2.css
@@ -9,3 +9,27 @@
 .print-page:hover {
   background-color: #6c5af3;
 }
+
+#num1, #num2 {
+  width: 20%;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border: 2px solid #8576FF;
+  border-radius: 2rem;
+}
+
+#calculate-sum {
+  margin: 3%;
+  padding: 2%;
+  border: 4px solid #8576FF;
+  border-radius: 2rem;
+  color: red;
+  font-weight: 799;
+  font-size: 1.5rem;
+}
+
+.sum-output {
+  color: rgb(255, 0, 64);
+  font-weight: 900;
+  font-size: 2rem;
+}
