--- a/Js Starting Practice/styles.css
+++ b/Js Starting Practice/styles.css
@@ -3,6 +3,13 @@
 }
 
 .huge {
-  font-size: 10rem;
+  font-size: 6rem;
   color: red;
+}
+
+.button-style {
+  font-size: 2rem;
+  padding: 1.5rem;
+  color: white;
+  border-radius: 1.7rem;
 }
