--- a/SELF/style2.css
+++ b/SELF/style2.css
@@ -3,8 +3,18 @@ h1, h2 {
   color: rgb(94, 89, 171);
 }
 
-#calculate-sum, .print-page {
-  margin: 3%;
+#calculate-sum, .greet, .mutiply, .divide {
+  margin: 1%;
+  padding: 1%;
+  border: 2px solid #ffffff;
+  border-radius: 1.8rem;
+  background-color: orangered;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.print-page {
+  margin: 1%;
   padding: 1%;
   border: 2px solid #ffffff;
   border-radius: 1.8rem;
@@ -19,7 +29,7 @@ h1, h2 {
 }
 
 #num1, #num2 {
-  width: 20%;
+  width: 10%;
   margin: 0.5rem;
   padding: 0.5rem;
   border: 2px solid #8576FF;
@@ -33,10 +43,16 @@ h1, h2 {
 }
 
 .show-url {
-  font-family: cursive;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .equal-sign {
   font-size: 2rem;
   color: rgb(94, 89, 171);
+}
+
+.p-greet {
+  font-size: 1.5rem;
+  font-family: cursive;
+  color: blue;
 }
